# organization-service

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  gunicorn_conf.py  mypy.ini  nginx.conf  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 2025_01_10_1427-5f63b3fc0613_init_schemas.py
src/: main.py
src/core/api/: app.py
src/core/api/configs/v1/: types_activity.py
src/core/api/v1/dependencies/common/: api_key.py
src/core/api/v1/presentation/exceptions/: core_error.py  responses_error.py
src/core/api/v1/presentation/requests/: activity.py  biulding.py  location.py  organization.py
src/core/api/v1/presentation/responses/: error.py  organization.py
src/core/api/v1/routes/middlewars/: log.py
src/core/api/v1/routes/organization/: route.py
src/core/api/v1/routes/organization/endpoints/: __init__.py  by_activity_root.py  by_activity_tree.py  by_building_id.py  by_location.py  by_org_name.py  list_org_by_activity.py  list_org_by_building.py  list_org_by_radius.py  list_org_look_for_activity.py  org_by_id.py  org_by_name.py
src/core/api/v1/routes/utils/: extractor_geo.py  resp_error.py  resp_org_full_data.py  resp_orgs_by_activity.py
src/core/api/v1/routes/utils/dependencies/: api_key.py
src/core/api/v1/routes/utils/dto/: location.py
src/core/configs/: description.md  env.py
src/core/configs/logs/: __init__.py  filters.py  formatters.py  handlers.py  log_config.py
src/core/infrastructure/database/: __init__.py  client.py  select_example.sql
src/core/infrastructure/database/core/: engine.py
src/core/infrastructure/database/cruds/: facade.py
src/core/infrastructure/database/cruds/models/: activity.py  base.py  location.py  org.py
src/core/infrastructure/database/schemas/: activity.py  base.py  buildings.py  organizations.py  phones.py
src/core/infrastructure/tracer/: trace_app.py  trace_db.py
tests/database/: conftest.py  factory_schemas.py  test_database.py
