[tool.poetry]
name = "organizationsapi"
version = "0.1.0"
description = ""
authors = ["Miron-Anosov <mairon26rus@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.4.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
fastapi = "^0.115.6"
python-multipart = "^0.0.20"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
geoalchemy2 = "^0.16.0"
asyncpg = "^0.30.0"



[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"


[tool.coverage.run]
branch = true
source = ["src"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.mypy]
plugins = ['pydantic.mypy']
python_version = 3.12
module_paths = ["src"]
ignore_missing_imports = true
mypy_path = ["src"]
packages = ["src"]
exclude = '''
   (?x)
   ^\.venv/ |
   ^test/ |
   ^tests/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 79
include = '\.py'
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"