[tool.poetry]
name = "organizationsapi"
version = "0.1.0"
description = ""
authors = ["Miron-Anosov <mairon26rus@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.4.0"
pydantic = { extras = ["email"], version = "^2.8.2" }
fastapi = "^0.115.6"
python-multipart = "^0.0.20"
sqlalchemy = { extras = ["mypy"], version = "^2.0.36" }
alembic = "^1.14.0"
geoalchemy2 = { extras = ["shapely"], version = "^0.17.0" }
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
greenlet = "^3.1.1"
mypy = "^1.14.1"



[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
factory-boy = "^3.3.1"
asgi-lifespan = "^2.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.1"
types-factory-boy = "^0.4.1"
faker = "^33.3.0"
mimesis = { extras = ["factory"], version = "^18.0.0" }
coverage = "^7.6.10"
types-shapely = "^2.0.0.20241221"


[tool.coverage.run]
branch = true
source = ["src"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.mypy]
plugins = ['pydantic.mypy', "sqlalchemy.ext.mypy.plugin"]
python_version = 3.12
module_paths =  ["src"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_reexport = false
disallow_untyped_defs = true
ignore_missing_imports = false
platform = "linux"
exclude = '''
   (?x)
   ^\.venv/ |
   ^test/ |
   ^tests/ |
   ^alembic/
'''

[tool.pytest.ini_options]
pythonpath = [".", "../", "/src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "asyncio: mark test as async"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers"

[tool.black]
line-length = 79
include = '\.py'
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"